@@ -1,4 +1,4 @@
-.TH HDPARM 8 "September 2009" "Version 9.27"
+.TH HDPARM 8 "March 2010" "Version 9.28"
 
 .SH NAME
 hdparm \- get/set SATA/IDE device parameters
